# sycl-fft

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: FindFFTW3.cmake  syclfftConfig.cmake.in
examples/: CMakeLists.txt  host.cpp  sycl.cpp
include/syclfft/: common.hpp  host.hpp  span.hpp  syclfft.hpp
include/syclfft/detail/: cuda_queue_utils.hpp  cufft_provider_abi.hpp  provider_abi.h  provider_error_buffer.hpp  provider_loader.hpp  trace.hpp
src/core/: provider_loader.cpp
src/host/: host.cpp
src/providers/cufft/: cufft_provider.cpp
src/providers/fftw/: fftw_provider.cpp
src/sycl/: sycl.cpp
test_package/: CMakeLists.txt  conanfile.py  host.cpp  sycl.cpp
tests/: CMakeLists.txt  bad_fftw_provider.cpp  host_tests.cpp  plugin_tests.cpp  span_tests.cpp  sycl_tests.cpp  test_utils.hpp
