if(TARGET syclfft_host)
  add_executable(syclfft_host_example host.cpp)
  target_link_libraries(syclfft_host_example PRIVATE syclfft::host)
endif()

if(TARGET syclfft_sycl)
  add_executable(syclfft_sycl_example sycl.cpp)
  target_link_libraries(syclfft_sycl_example PRIVATE syclfft::sycl)
  if(SYCLFFT_SYCL_IMPLEMENTATION STREQUAL "AdaptiveCpp")
    add_sycl_to_target(TARGET syclfft_sycl_example SOURCES sycl.cpp)
  endif()
endif()
